--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Classes\BuiltInVisibilitySetting.cs" />
     <Compile Include="Classes\MollierControlSettings.cs" />
     <Compile Include="Classes\PointGradientVisibilitySetting.cs" />
+    <Compile Include="Classes\MollierControlZone.cs" />
     <Compile Include="Classes\VisibilitySetting.cs" />
     <Compile Include="Classes\VisibilitySettings.cs" />
     <Compile Include="Controls\BuiltInVisibilitySettingControl.cs">
