--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -74,11 +74,59 @@
     <Compile Include="Classes\MollierControlZone.cs" />
     <Compile Include="Classes\VisibilitySetting.cs" />
     <Compile Include="Classes\VisibilitySettings.cs" />
+    <Compile Include="Controls\AdiabaticHumidificationProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\AdiabaticHumidificationProcessControl.Designer.cs">
+      <DependentUpon>AdiabaticHumidificationProcessControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\BuiltInVisibilitySettingControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\BuiltInVisibilitySettingControl.Designer.cs">
       <DependentUpon>BuiltInVisibilitySettingControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\CoolingProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\CoolingProcessControl.Designer.cs">
+      <DependentUpon>CoolingProcessControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\CustomizeProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\CustomizeProcessControl.Designer.cs">
+      <DependentUpon>CustomizeProcessControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\HeatingProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\HeatingProcessControl.Designer.cs">
+      <DependentUpon>HeatingProcessControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\HeatRecoveryProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\HeatRecoveryProcessControl.Designer.cs">
+      <DependentUpon>HeatRecoveryProcessControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\IsotermicHumidificationProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\IsotermicHumidificationProcessControl.Designer.cs">
+      <DependentUpon>IsotermicHumidificationProcessControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ListPointsOptionControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ListPointsOptionControl.Designer.cs">
+      <DependentUpon>ListPointsOptionControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\MixingProcessControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MixingProcessControl.Designer.cs">
+      <DependentUpon>MixingProcessControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\MollierControl.cs">
       <SubType>UserControl</SubType>
@@ -86,16 +134,42 @@
     <Compile Include="Controls\MollierControl.Designer.cs">
       <DependentUpon>MollierControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\MollierPointControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MollierPointControl.Designer.cs">
+      <DependentUpon>MollierPointControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\MollierProcessTypeControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MollierProcessTypeControl.Designer.cs">
+      <DependentUpon>MollierProcessTypeControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ParameterControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ParameterControl.Designer.cs">
+      <DependentUpon>ParameterControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\TestControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\TestControl.Designer.cs">
       <DependentUpon>TestControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Create\Controls.cs" />
+    <Compile Include="Enums\ProcessParameterType.cs" />
+    <Compile Include="Enums\ProcessCalculationType.cs" />
     <Compile Include="Enums\ChartExportType.cs" />
     <Compile Include="Enums\ChartDataType.cs" />
-    <Compile Include="Enums\ProcessType.cs" />
     <Compile Include="Enums\ChartParameterType.cs" />
+    <Compile Include="Forms\CustomizeProcessForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CustomizeProcessForm.Designer.cs">
+      <DependentUpon>CustomizeProcessForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MollierControlSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +188,12 @@
     <Compile Include="Forms\MollierPointForm.Designer.cs">
       <DependentUpon>MollierPointForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MollierProcessForm4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MollierProcessForm4.Designer.cs">
+      <DependentUpon>MollierProcessForm4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MollierProcessForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +206,12 @@
     <Compile Include="Forms\OpenJSONForm.Designer.cs">
       <DependentUpon>OpenJSONForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\PointListOptionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PointListOptionForm.Designer.cs">
+      <DependentUpon>PointListOptionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,7 +221,10 @@
     <Compile Include="Interface\IUserVisibilitySetting.cs" />
     <Compile Include="Interface\IVisibilitySetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\ParameterValue.cs" />
+    <Compile Include="Query\ProcessParameterTypes.cs" />
     <Compile Include="Query\DownPoint.cs" />
+    <Compile Include="Query\MollierPointByTwoParameters.cs" />
     <Compile Include="Query\ShapeSizeFactor.cs" />
     <Compile Include="Query\FindDivisionAreaCornerPoint.cs" />
     <Compile Include="Query\FullProcessName.cs" />
@@ -152,14 +241,50 @@
     <Compile Include="Query\ZoomParameters.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\AdiabaticHumidificationProcessControl.resx">
+      <DependentUpon>AdiabaticHumidificationProcessControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\BuiltInVisibilitySettingControl.resx">
       <DependentUpon>BuiltInVisibilitySettingControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CoolingProcessControl.resx">
+      <DependentUpon>CoolingProcessControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CustomizeProcessControl.resx">
+      <DependentUpon>CustomizeProcessControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\HeatingProcessControl.resx">
+      <DependentUpon>HeatingProcessControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\HeatRecoveryProcessControl.resx">
+      <DependentUpon>HeatRecoveryProcessControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\IsotermicHumidificationProcessControl.resx">
+      <DependentUpon>IsotermicHumidificationProcessControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ListPointsOptionControl.resx">
+      <DependentUpon>ListPointsOptionControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MixingProcessControl.resx">
+      <DependentUpon>MixingProcessControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MollierControl.resx">
       <DependentUpon>MollierControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MollierPointControl.resx">
+      <DependentUpon>MollierPointControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MollierProcessTypeControl.resx">
+      <DependentUpon>MollierProcessTypeControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ParameterControl.resx">
+      <DependentUpon>ParameterControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\TestControl.resx">
       <DependentUpon>TestControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CustomizeProcessForm.resx">
+      <DependentUpon>CustomizeProcessForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MollierControlSettingsForm.resx">
       <DependentUpon>MollierControlSettingsForm.cs</DependentUpon>
@@ -170,11 +295,17 @@
     <EmbeddedResource Include="Forms\MollierPointForm.resx">
       <DependentUpon>MollierPointForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MollierProcessForm4.resx">
+      <DependentUpon>MollierProcessForm4.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MollierProcessForm.resx">
       <DependentUpon>MollierProcessForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OpenJSONForm.resx">
       <DependentUpon>OpenJSONForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PointListOptionForm.resx">
+      <DependentUpon>PointListOptionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TestForm.resx">
       <DependentUpon>TestForm.cs</DependentUpon>
